optimize code ,complete k13 k14

--- a/readme.org
+++ b/readme.org
@@ -1,9 +1,9 @@
-* TODO match法算
+* DONE match法算
   假设G1有n个结点,G2有m个结点,从n个结点里取m个然后匹配图1,图2.
 * DONE p3 c4算法
   图G1,子图p3为三个点的直线,一个中间点,两个终点
   判断是否有一个图上的点D满足,与两个终点相交
-* TODO p3 K14算法
+* DONE p3 K14算法
   图G1的子图p3
   找两个点,同时与中间点相交,不与两个终点相关且两个点相互不相交
 * p5 算法1 z4
