--- a/readme.org
+++ b/readme.org
@@ -4,12 +4,12 @@
 ** DONE p3 c4算法
    图G1,子图p3为三个点的直线,一个中间点,两个终点
    判断是否有一个图上的点D满足,与两个终点相交
-** DONE p3 K14算法
+** DONE p3 K13 K14算法
    图G1的子图p3
    找两个点,同时与中间点相交,不与两个终点相关且两个点相互不相交
-** p5 算法1 z4
-** p5 算法2 N113
-** p5 算法3 p7
+** DONE p5 算法1 z4
+** DONE p5 算法2 N113
+** DONE p5 算法3 p7
 
 * 文件说明
 ** 算法相关
