--- a/readme.org
+++ b/readme.org
@@ -18,3 +18,10 @@ GNU Make 4.3
 #+begin_src shell
 make run
 #+end_src
+
+* undo
+** TODO 修改graph点集合为 unordered_set
+** TODO 增加谷歌测试
+** TODO 优化算法
+** TODO 判断函数修改为一个函数
+
